<resources>
    <string name="app_name">Spark App</string>
    <string name="spark">SPARK</string>
    <string name="please_enter_the_time_of_day">Please enter the time of day</string>
    <string name="your_spark_will_appear_here">Your spark will appear here</string>
    <string name="social_spark">Social Spark</string>
    <string name="check_spark">Check Spark</string>
    <string name="reset">Reset</string>
    <string name="options">Options</string>
    <string name="tap_here_for_different_times_of_day_options">Tap here for different times of day options</string>
</resources>